(Fix) Info Card

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
                 </div>
                 <div class="w-50">
                     <h4>Info Utete</h4>
-                    <h6>Anni</h6>
-                    <div id="age" class="pr-3"></div>
+                    <h6>Età</h6>
+                    <p id="age" class="pr-3"></p>
                     <h6>Tratta</h6>
-                    <div id="km"></div>
+                    <p id="km"></p>
                 </div>
             </div>
         </div>
