(BONUS) Added Bonus

--- a/index.html
+++ b/index.html
@@ -16,8 +16,19 @@
 </head>
 
 <body>
-    <div class="container mt-5">
-        <div class="card">
+
+    <header>
+        <nav class="navbar bg-body-tertiary h-100">
+            <div class="container-fluid h-100">
+                <a class="navbar-brand h-100" href="#">
+                    <img src="img/Trenitalia_logo.svg.png" alt="" class="img-fluid h-100">
+                </a>
+            </div>
+        </nav>
+    </header>
+
+    <div class="container">
+        <div class="card mt-5">
             <img src="img/1023x440_collegamenti-Frecciarossa_03-23.jpg" class="card-img-top" alt="...">
             <div class="card-body d-flex">
                 <div class="w-50">
